add lecture link

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -128,6 +128,7 @@ Monday, December 18
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/af979516eae94fe2ba9f525c082c39d31d">Oct 12</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/c3dbe351fcf34fdcb48eddeb308572b31d">Oct 17</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/6f6ed12141ed4c508d14a28d4581085c1d">Oct 19</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b457bb56990c44a8bd2cd5571bdda9e61d">Oct 24</a>
   <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/adec4e90415343f399e03940b41c4a991d">Sep 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
