add lecture link

--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -110,6 +110,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/1b1b02aba57f43338080a53121bc2a9e1d">Oct 2</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/9cc8fcd3cef24877892c12b7cd2288e11d">Oct 16</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/85db5c11eec04a149026dd897bd777001d">Oct 23</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/d37a9c3f297c47c1882defceba7cdc741d">Oct 30</a>
 <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/18aa77ec38ca433d967e6d827ef6e6f11d">Sep 19</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2deca97318124a45b408d4ef897b62641d">Sep 26</a>
