update course materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -60,9 +60,9 @@ Monday, December 18
     (<a href="lecture/confint-mean-sol.pdf">Solutions</a>)
   <li><a href="lecture/confint-prop.pdf">Oct 19 - Confidence Interval for Population Proportion</a>
     (<a href="lecture/confint-prop-sol.pdf">Solutions</a>)
-  <!--
-  <li><a href="lecture/htest.pdf">Nov 1 - Hypothesis Tests</a>
+  <li><a href="lecture/htest.pdf">Oct 31 - Hypothesis Tests</a>
     (<a href="lecture/htest-sol.pdf">Solutions</a>)
+  <!--
   <li><a href="lecture/htest2.pdf">Nov 3 - Hypothesis Tests 2</a>
     (<a href="lecture/htest2-sol.pdf">Solutions</a>)
     <ul>
@@ -129,6 +129,7 @@ Monday, December 18
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/c3dbe351fcf34fdcb48eddeb308572b31d">Oct 17</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/6f6ed12141ed4c508d14a28d4581085c1d">Oct 19</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b457bb56990c44a8bd2cd5571bdda9e61d">Oct 24</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/8642fc9f334f4037b82c2bc506b65de11d">Oct 31</a>
   <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/adec4e90415343f399e03940b41c4a991d">Sep 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
