--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -74,9 +74,9 @@ Monday, December 18
     <ul>
       <li><a href="http://www.drianwalker.com/overtaking/">Ian Walker's Bike Helmet Study</a>
     </ul>
-  <!--
-  <li><a href="lecture/compare2.pdf">Nov 10 - Comparison 2</a>
+  <li><a href="lecture/compare2.pdf">Nov 9 - Comparison 2</a>
     (<a href="lecture/compare2-sol.pdf">Solutions</a>)
+  <!--
   <li><a href="lecture/reg-intro.pdf">Nov 15 - Introduction to Linear Regression</a>
     (<a href="lecture/reg-intro-sol.pdf">Solutions</a>)
     <ul>
@@ -132,6 +132,7 @@ Monday, December 18
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/8642fc9f334f4037b82c2bc506b65de11d">Oct 31</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/cdf251b531c34c8a8be3a080d31f10b61d">Nov 2</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/9e416c8b73d243e6bef7c0c40f6b494a1d">Nov 7</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/36ea9dee2d5f4083a45731a2e6a5d1bc1d">Nov 9</a>
   <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/adec4e90415343f399e03940b41c4a991d">Sep 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
@@ -193,13 +194,12 @@ Monday, December 18
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
     </ul>
- <!--
-  <li><a href="hw/hw08.pdf">Homework 8</a>
-    (Due Nov 17)
+  <li><a href="hw/hw08.pdf">Homework 8</a> (Due Nov 16)
     <ul>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/retail_sales.csv">retail_sales.csv</a>
     </ul>
+ <!--
   <li><a href="hw/hw09.pdf">Homework 9</a>
     (Due Dec 1)
     <ul>
