--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -76,12 +76,12 @@ Monday, December 18
     </ul>
   <li><a href="lecture/compare2.pdf">Nov 9 - Comparison 2</a>
     (<a href="lecture/compare2-sol.pdf">Solutions</a>)
-  <!--
-  <li><a href="lecture/reg-intro.pdf">Nov 15 - Introduction to Linear Regression</a>
+  <li><a href="lecture/reg-intro.pdf">Nov 14 - Introduction to Linear Regression</a>
     (<a href="lecture/reg-intro-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
+  <!--
   <li><a href="lecture/reg-inference.pdf">Nov 17 - Regression Inference and Forecasting</a>
     (<a href="lecture/reg-inference-sol.pdf">Solutions</a>)
     <ul>
@@ -133,6 +133,7 @@ Monday, December 18
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/cdf251b531c34c8a8be3a080d31f10b61d">Nov 2</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/9e416c8b73d243e6bef7c0c40f6b494a1d">Nov 7</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/36ea9dee2d5f4083a45731a2e6a5d1bc1d">Nov 9</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/035d0696f6fc48f79175e9413e45085a1d">Nov 14</a>
   <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/adec4e90415343f399e03940b41c4a991d">Sep 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
