--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -88,9 +88,9 @@ Monday, December 18
       <li><a href="data/studyhrs-salary.csv">studyhrs-salary.csv</a>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
-  <!--
-  <li><a href="lecture/reg-diagnostics.pdf">Nov 22 - Regression Diagnostics</a>
+  <li><a href="lecture/reg-diagnostics.pdf">Nov 21 - Regression Diagnostics</a>
     (<a href="lecture/reg-diagnostics-sol.pdf">Solutions</a>)
+  <!--
   <li><a href="lecture/reg-multiple.pdf">Nov 29 - Multiple Regression, F Tests</a>
     (<a href="lecture/reg-multiple-sol.pdf">Solutions</a>)
     <ul>
@@ -135,6 +135,7 @@ Monday, December 18
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/36ea9dee2d5f4083a45731a2e6a5d1bc1d">Nov 9</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/035d0696f6fc48f79175e9413e45085a1d">Nov 14</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/3317b652964149adbee475cd4b2f15411d">Nov 16</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e947b3d8f42847acb32d4f7d931791a71d">Nov 21</a>
   <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/adec4e90415343f399e03940b41c4a991d">Sep 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
