--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -113,6 +113,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/d37a9c3f297c47c1882defceba7cdc741d">Oct 30</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a98195df121b401eb7681b7447fd01e01d">Nov 13</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/074bf7575d2948a8a8a520782bb2bc201d">Nov 20</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/829e00eda15746ccb3c1b1d057d67be41d">Nov 27</a>
 <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/18aa77ec38ca433d967e6d827ef6e6f11d">Sep 19</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2deca97318124a45b408d4ef897b62641d">Sep 26</a>
