--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -96,13 +96,13 @@ Monday, December 18
       <li><a href="data/mealsData.csv">mealsData.csv</a>
       <li><a href="data/EASTON.CSV">EASTON.CSV</a>
     </ul>
-  <!--
   </li>
-  <li><a href="lecture/reg-multiple2.pdf">Dec 1 - Multiple Regression 2</a>
+  <li><a href="lecture/reg-multiple2.pdf">Nov 30 - Multiple Regression 2</a>
     (<a href="lecture/reg-multiple2-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/movies2013.csv">movies2013.csv</a>
     </ul>
+  <!--
   <li><a href="lecture/assoc.pdf">Dec 6 - Association and Causation</a>
     (<a href="lecture/assoc-sol.pdf">Solutions</a>)
     <ul>
@@ -210,15 +210,12 @@ Monday, December 18
       <li><a href="data/PriceToEarnings.CSV">PriceToEarnings.CSV</a>
     </ul>
   <li><a href="handout/f-percentile.pdf">F-Table: Percentiles of F distribution</a>
- <!--
-  <li><a href="hw/hw10.pdf">Homework 10</a>
-    (Due Dec 8)
+  <li><a href="hw/hw10.pdf">Homework 10</a> (Due Dec 7)
     <ul>
       <li><a href="data/MAGAZINE.CSV">MAGAZINE.CSV</a>
     </ul>
   <li><a href="handout/final.pdf">Sample Final</a>
       (<a href="handout/final-sol.pdf">Solutions</a>)
- -->
 </ul>
 </div>
 </main>
