--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -137,6 +137,7 @@ Monday, December 18
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/3317b652964149adbee475cd4b2f15411d">Nov 16</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e947b3d8f42847acb32d4f7d931791a71d">Nov 21</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a6bf8351fce2405f96c8099f1919244c1d">Nov 28</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/45b12daaee8e440cbb673041339799f61d">Nov 30</a>
   <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/adec4e90415343f399e03940b41c4a991d">Sep 6</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b9fdc985a2aa47c3957fae3fdca02d471d">Sep 8</a>
