update langone materials

--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -76,19 +76,19 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/Village.CSV">Village.CSV</a>
       <li><a href="data/interest-dinners.csv">interest-dinners.csv</a>
     </ul>
-<!--
-  <li><a href="lecture/reg-diagnostics.pdf">Nov 28 (1) - Regression Diagnostics</a>
+  <li><a href="lecture/reg-diagnostics.pdf">Dec 4 (1) - Regression Diagnostics</a>
     (<a href="lecture/reg-diagnostics-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/Village.CSV">Village.CSV</a>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
-  <li><a href="lecture/reg-multiple.pdf">Nov 28 (2) - Multiple Regression, F Tests</a>
+  <li><a href="lecture/reg-multiple.pdf">Dec 4 (2) - Multiple Regression, F Tests</a>
     (<a href="lecture/reg-multiple-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
       <li><a href="data/EASTON.CSV">EASTON.CSV</a>
     </ul>
+<!--
   <li><a href="lecture/reg-multiple2.pdf">Nov 30 (1) - Multiple Regression 2</a>
     (<a href="lecture/reg-multiple2-sol.pdf">Solutions</a>)
     <ul>
@@ -114,6 +114,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a98195df121b401eb7681b7447fd01e01d">Nov 13</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/074bf7575d2948a8a8a520782bb2bc201d">Nov 20</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/829e00eda15746ccb3c1b1d057d67be41d">Nov 27</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/74567f7eb601444e8b407e5025557eec1d">Dec 4</a>
 <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/18aa77ec38ca433d967e6d827ef6e6f11d">Sep 19</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2deca97318124a45b408d4ef897b62641d">Sep 26</a>
@@ -171,12 +172,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
     </ul>
-<!--
   <li><a href="handout/f-percentile.pdf">F-Table: Percentiles of F distribution</a>
-  <li><a href="hw/hw09.pdf">Homework 9</a> (Due Dec. 5; <a href="hw/hw09sol.pdf">Solutions</a>)
+  <li><a href="hw/hw09.pdf">Homework 9</a> (Due Dec. 11)
     <ul>
       <li><a href="data/MAGAZINE.CSV">MAGAZINE.CSV</a>
     </ul>
+<!--
   <li><a href="handout/final.pdf">Sample Final</a>
       (<a href="handout/final-sol.pdf">Solutions</a>)
 -->
