--- a/course/langone/index.html
+++ b/course/langone/index.html
@@ -88,12 +88,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/mealsData.csv">mealsData.csv</a>
       <li><a href="data/EASTON.CSV">EASTON.CSV</a>
     </ul>
-<!--
-  <li><a href="lecture/reg-multiple2.pdf">Nov 30 (1) - Multiple Regression 2</a>
+  <li><a href="lecture/reg-multiple2.pdf">Dec 11 (1) - Multiple Regression 2</a>
     (<a href="lecture/reg-multiple2-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/movies2013.csv">movies2013.csv</a>
     </ul>
+<!--
   <li><a href="lecture/assoc.pdf">Nov 30 (2) - Association and Causation</a>
     (<a href="lecture/assoc-sol.pdf">Solutions</a>)
     <ul>
@@ -115,6 +115,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/074bf7575d2948a8a8a520782bb2bc201d">Nov 20</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/829e00eda15746ccb3c1b1d057d67be41d">Nov 27</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/74567f7eb601444e8b407e5025557eec1d">Dec 4</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/ad61cedd730443dfb4c1375aec37c7ae1d">Dec 11</a>
 <!--
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/18aa77ec38ca433d967e6d827ef6e6f11d">Sep 19</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2deca97318124a45b408d4ef897b62641d">Sep 26</a>
