--- a/reports/index.html
+++ b/reports/index.html
@@ -7,9 +7,14 @@ title: Patrick O. Perry - Reports
 <section class="bibliography">
   <ul>
     <li>
+      <a href="https://medium.com/@ptrckprry/is-there-a-better-way-to-rank-business-schools-3e15648e5d24">Is there a better way to rank business schools?</a>.
+      With K. Reigert.
+      April 4, 2016.
+
+    <li>
       <a href="http://arxiv.org/abs/1504.04941">Fast moment-based estimation for hierarchical models</a>.
       <cite>Journal of the Royal Statistical Society: Series&nbsp;B (Statistical Methodology)</cite>,
-      Forthcoming 2016.
+      <b>79</b>(1):267-291.
       <ul>
         <li>R Package: <a href="http://cran.r-project.org/web/packages/mbest/index.html">mbest</a>
         <li>Code to Reproduce Figures: <a href="mhlm/mhlm-sources.tar.gz">mhlm-sources.tar.gz</a>
