add more reports

--- a/reports/index.html
+++ b/reports/index.html
@@ -7,9 +7,16 @@ title: Patrick O. Perry - Reports
 <section class="bibliography">
   <ul>
     <li>
+      <a href="https://arxiv.org/abs/1710.08963">Scaling text with the class affinity model</a>.
+      With K. Benoit.
+
+    <li>
+      <a href="https://arxiv.org/abs/1702.02658">Estimating the number of clusters using cross-validation</a>
+      With W. Fu.
+
+    <li>
       <a href="https://medium.com/@ptrckprry/is-there-a-better-way-to-rank-business-schools-3e15648e5d24">Is there a better way to rank business schools?</a>.
       With K. Reigert.
-      April 4, 2016.
 
     <li>
       <a href="http://arxiv.org/abs/1504.04941">Fast moment-based estimation for hierarchical models</a>.
@@ -23,7 +30,6 @@ title: Patrick O. Perry - Reports
     <li>
       <a href="http://arxiv.org/abs/1310.7269">Degrees of freedom for combining regression with factor analysis</a>.
       With N. S. Pillai.
-      Submitted.
       <ul>
         <li>Code to Reproduce Figures: <a href="latentdf/latentdf-sources.tar.gz">latentdf-sources.tar.gz</a>
       </ul>
@@ -32,7 +38,6 @@ title: Patrick O. Perry - Reports
     <li>
       <a href="http://arxiv.org/abs/1206.6927">Consistent biclustering</a>.
       With C. J. Flynn.
-      Submitted.
       <ul>
         <li>R Package (in development, not on CRAN): <a href="http://github.com/patperry/biclustpl">biclustpl</a>
         <li>Code to Reproduce Figures: <a href="biclustpl/biclustpl-sources.tar.gz">biclustpl-sources.tar.gz</a>
@@ -42,7 +47,6 @@ title: Patrick O. Perry - Reports
     <li>
       <a href="http://arxiv.org/abs/1201.5871">Null models for network data</a>.
       With P. J. Wolfe.
-      Submitted.
     </li>
 
     <li>
