--- a/reports/index.html
+++ b/reports/index.html
@@ -15,7 +15,7 @@ title: Patrick O. Perry - Reports
       With W. Fu.
 
     <li>
-      <a href="https://medium.com/@ptrckprry/is-there-a-better-way-to-rank-business-schools-3e15648e5d24">Is there a better way to rank business schools?</a>.
+      <a href="https://medium.com/@ptrckprry/is-there-a-better-way-to-rank-business-schools-3e15648e5d24">Is there a better way to rank business schools?</a>
       With K. Reigert.
 
     <li>
