add style project

--- a/reports/index.html
+++ b/reports/index.html
@@ -7,6 +7,10 @@ title: Patrick O. Perry - Reports
 <section class="bibliography">
   <ul>
     <li>
+        <a href="https://www.nyu.edu/projects/spirling/documents/boring.pdf">Political Style at Westminster The Changing Role of Seniority in Making Members of Parliament as Boring As Ever</a>.
+      With A. Spirling.
+
+     <li>
       <a href="https://arxiv.org/abs/1710.08963">Scaling text with the class affinity model</a>.
       With K. Benoit.
 
