add mlevels link

--- a/reports/index.html
+++ b/reports/index.html
@@ -7,6 +7,10 @@ title: Patrick O. Perry - Reports
 <section class="bibliography">
   <ul>
     <li>
+        <a href="https://arxiv.org/abs/1806.02321">Fitting a deeply-nested hierarchical model to a large book review dataset using a moment-based estimator</a>.
+        With N. Zhang and K. Schmaus.
+
+    <li>
         <a href="https://www.nyu.edu/projects/spirling/documents/boring.pdf">Political Style at Westminster The Changing Role of Seniority in Making Members of Parliament as Boring As Ever</a>.
       With A. Spirling.
 
