--- a/index.html
+++ b/index.html
@@ -12,22 +12,14 @@ title: Patrick O. Perry - Home
   <article>
     <p><span itemprop="name">Patrick O. Perry</span> is a statistician developing tools and methodology for nontraditional data, especially text and networks. He has worked on text summarization and scaling methods, dynamic network analysis, clustering methods for networks and other data, fitting methods for large-scale hierarchical models, and latent factor methods for high-dimensional data.</p>
     <p>Perry's work has appeared in <cite>The Journal of the Royal Statistical Society</cite>, <cite>The Annals of Applied Statistics</cite>, and <cite>The Journal of Machine Learning Research</cite>, among other venues.  He has developed and released open source implementations of his methods for the R software environment and has written a variety of other software packages for data analysis in the C and Haskell programming languages.</p>
-    <p>Currently, Perry is an <span itemprop="title">Assistant Professor of Information, Operations, and Management Sciences</span> at the <span itemprop="affiliation">New York University Stern School of Business</span>. He teaches courses in introductory statistics, forecasting time series data, and statistics for social data. Perry received a BS in mathematics, an MS in electrical engineering and a PhD in statistics from Stanford University, and he completed a postdoctoral fellowship at Harvard University.</p>
+    <p>Currently, Perry is a <span itemprop="title">Senior Data Scientist</span> at <span itemprop="affiliation"><a href="https://www.hioscar.com">Oscar Health</a></span>. Prior to that he was an Assistant Professor in the Statistics group at NYU Stern teaching courses in introductory statistics, forecasting time series data, and statistics for social data. Perry received a BS in mathematics, an MS in electrical engineering and a PhD in statistics from Stanford University, and he completed a postdoctoral fellowship at Harvard University.</p>
   </article>
 
   <div class="contact">
-    <address itemprop="address" itemscope
-             itemtype="http://data-vocabulary.org/Address">
-      <span itemprop="street-address">IOMS Dept, NYU Stern<br>44 West 4th St, Rm 8-63</span><br>
-      <span itemprop="locality">New York</span>,
-      <span itemprop="region">NY</span>
-      <span itemprop="postal-code">10012</span>
-      <meta itemprop="country-name" content="USA">
-    </address>
     <meta itemprop="url" content="http://ptrckprry.com">
     <meta itemprop="url" content="http://github.com/patperry">
     <address class="email">
-        pperry@stern.nyu.edu
+        patperry@gmail.com
     </address>
     <address class="twitter">
       <a itemprop="url" href="http://twitter.com/ptrckprry">@ptrckprry</a>
